exports[`DefineItem React component Renders Default correctly 1`] = `
<dd
  className="defineItem">
  Item
</dd>
`;

exports[`DefineItem React component Renders Horizontal correctly 1`] = `
<dd
  className="defineItem horizontal">
  Item
</dd>
`;

exports[`DefineItem React component Renders Vertical correctly 1`] = `
<dd
  className="defineItem vertical">
  Item
</dd>
`;
